--- a/Practica2/memoria/PRACTICA_01_GRUPO_01.tex
+++ b/Practica2/memoria/PRACTICA_01_GRUPO_01.tex
@@ -57,8 +57,8 @@
 \newpage
 
 \section{Introducción}
-    La siguiente sección incluye 
-    
+    La siguiente sección incluye
+
 \section{Parte 1: Clasificación}
     \subsection{Análisis y preprocesado de datos}
         Explicación de los pasos previos de lo que vimos en clase y división en cat
@@ -66,14 +66,23 @@
         Generalidades de todos los experimentos. hacer hincapié en lo de las stopwords. Caso base
         \subsubsection{Experimentación básica}
         Tablas de cada uno de lo que hicimos esa tarde
-        
+
         \subsubsection{Experimentación avanzada}
         Combinación de los mejores resultados básicos
-        
+
     \subsection{Comentario de los resultados obtenidos}
     Mucho text
 
 \section{Parte 2: Clustering}
+
+\subsection{Experimentación}
+
+\subsection{Mejor resultado}
+
+
+
+
+
  10 modelos de K Medias variando n Clústeres, semillas y funciones de distancia
 
 Analizar al menos 1 (en detalle)
@@ -83,7 +92,7 @@ clasificación sobre el modelo y sacar el árbol
 \section{Conclusiones}
 
 
-\clearpage 
+\clearpage
 
 \section{Referencias}
     \begin{itemize}
